# armino

./: README.md  README_CN.md  SConscript  export.sh
bootloader/: Makefile
components/bk_libs/: CMakeLists.txt  Kconfig  lib_sys_config.c  manifest.xml  sys_config.c  sys_config_check.c
components/bk_libs/bk7231n_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7231n_legacy_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7231n_matter/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235_app/config/: sdkconfig
components/bk_libs/bk7235_bk7235_config1/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235_bk7235_config2/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235_bk7235_config3/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235_bk7256xx_mp/config/: sdkconfig
components/bk_libs/bk7235_cp1/config/: sdkconfig.h
components/bk_libs/bk7235_cp1_legacy_app/config/: sdkconfig
components/bk_libs/bk7235_harmony/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7235_legacy_app/config/: sdkconfig
components/bk_libs/bk7235_matter/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7236/: cp_libs.sh
components/bk_libs/bk7236/config/: sdkconfig
components/bk_libs/bk7236_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7236_legacy_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7236a/config/: sdkconfig.h
components/bk_libs/bk7236a_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7236a_legacy_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7237/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7237_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7237_bk7256xx_mp/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7237_cp1/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7237_cp1_legacy_app/config/: sdkconfig
components/bk_libs/bk7237_legacy_app/config/: sdkconfig
components/bk_libs/bk7251/config/: sdkconfig
components/bk_libs/bk7251_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7251_legacy_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7256/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7256_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7256_ate_mini_code/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7256_bk7256_config1/config/: sdkconfig  sdkconfig.h
components/bk_libs/bk7256_bk7256xx_mp/config/: sdkconfig.h
components/bk_libs/bk7256_cp1/config/: sdkconfig
components/bk_libs/bk7256_cp1_legacy_app/config/: sdkconfig  sdkconfig.h
components/bk_libs/include/: sdk_version.h
(+3796 files in other folders)
